fixed bug where notices on alt style are behind nav

--- a/app/alternate-style/altstyle.css
+++ b/app/alternate-style/altstyle.css
@@ -2,6 +2,10 @@
   --playernameheight: 5vh;
 }
 
+.notice {
+  margin-top: 60px;
+}
+
 /* Type Colors */
 
 [data-type-1='normal'] {
